--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <button id="check-number">Check Number</button>
         
         <textarea id="output-box" disabled></textarea>
+
+        <p>Note: We respect your privacy, hence do not store any of your data</p>
         
     </div>
 </body>
